# aac

./: CMakeLists.txt
libFDK/include/: FDK_archdef.h
libPCMutils/src/: pcmutils_lib.cpp
libSYS/include/: machine_type.h
